2012-02-21  contributed anonymously

	* src/term.c (do_arc): Arcs smaller than 3 degrees were being
	reduced to a single line.  Bug #3490227.

2012-02-19  David Leverton  <dleverton@users.sourceforge.net>
	
	* src/graphics.c (edge_intersect):  Fix a bug that failed to draw a
	pure horizontal or vertical from out of range that crossed the entire
	range of a plot to terminate on the boundary.
	Bug #3488666

2012-02-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/graphics.c:  The histogram code was not designed to 
	mix well with other plot styles, and in particular with function plots.
	Fixes segfault on "plot 1, newhistogram illegal-syntax, foo".
	Fixes Bug #3486639 (key entry spacing of histograms + something else)

2012-02-08  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotItems.h src/qtterminal/QtGnuplotItems.cpp:
	Fixed the const-ness of QtGnuplotKeybox members.

2012-02-06  Thanate Dhirasakdanon  <dthanate@users.sourceforge.net>

	* term/lua.trm: Compatibility wrapper functions to support both lua 5.2
	and earlier versions.

	* term/lua/gnuplot-tikz.lua: fix tightboundingbox option

2012-02-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Remove error test that could not be reached in the DATA
	case and is incorrect in the FUNC case.

2012-01-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/linux.trm:  Provide a 5x9 raster font for linux.trm
	and svga.trm so that they are not dependent on --with-bitmap-terminals.
	Bug #3481336

2012-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:  Make the font scale handling more like pdf and eps.
	Bugs #3478745 #3480006

2012-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  If there is no key title, there is no need to draw a
	line between the title and the key samples.
	Bug #3478984

	* docs/gnuplot.doc:  Clarify that strlen returns string length in bytes,
	not characters.
